<resources>
    <string name="app_name">week1weekend</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">clear</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="enter_here">Enter here</string>
    <string name="delete">del</string>
    <string name="power">x^y</string>
    <string name="input">input</string>
    <string name="output">output</string>
    <string name="negative">+/-</string>
    <string name="euler">euler</string>
    <string name="pi">pi</string>
    <string name="natLog">ln</string>
    <string name="log">log</string>
    <string name="eulerPower">e^x</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="factorial">!</string>
    <string name="squareRoot">√</string>
    <string name="reciprocal">⅟ₓ</string>
    <string name="percent">%</string>
    <string name="memory">memory</string>
</resources>
